Modulos/5 - Kubernetes/Kind/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "goserver"
  labels:
    app: "goserver"
spec:
  containers:
    - name: goserver
      image: "ericcastroc/hello-go:latest"
