Modulos/5 - Kubernetes/Kind/nodeport.yml
apiVersion: v1  
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: NodePort
  ports:
  - name: goserver-service
    port: 80
    targetPort: 8000
    protocol: TCP
    nodePort: 30001
